5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1633_2926.log
== TEST (2019-04-02 18:06:59) 
-- CODE:
qtd_de_acai=float(input(valor))
print(qtd_de_acai)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qtd_de_acai=float(input(valor))
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:10) 
-- CODE:
qtd_de_acai=float(input("valor"))
print(qtd_de_acai)
-- OUTPUT:
504.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:07:33) 
-- CODE:
qtd_de_acai=float(input("valor"))
print(qtd_de_acai)
-- EXECUTION TIME:
0.147967
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
504.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
672.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
971.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:15) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfira=float(input("valor"))
total(qtd_de_acai+qtd_de_esfirra)
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total(qtd_de_acai+qtd_de_esfirra)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:41) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfira=float(input("valor"))
total=(qtd_de_acai+qtd_de_esfirra)
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=(qtd_de_acai+qtd_de_esfirra)
NameError: name 'qtd_de_esfirra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:58) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfirra=float(input("valor"))
total=(qtd_de_acai+qtd_de_esfirra)
print(round(total, 2))
-- OUTPUT:
505.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:22) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfirra=float(input("valor"))
total=(qtd_de_acai+qtd_de_esfirra)
print(round(total, 2))
-- OUTPUT:
505.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:12:45) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfirra=float(input("valor"))
total=(qtd_de_acai+qtd_de_esfirra)
print(round(total, 2))
-- EXECUTION TIME:
0.170586
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
505.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
674.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
971.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:24) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfirra=float(input("valor"))
qtd_de-acai= 24/1000
total=(qtd_de_acai+qtd_de_esfirra)
print(round(total, 2))
-- ERROR:
File "XXXX", line 3
    qtd_de-acai= 24/1000
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:00) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfirra=float(input("valor"))

total=(qtd_de_acai/1000(qtd_de_esfirra))
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(qtd_de_acai/1000(qtd_de_esfirra))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:27) 
-- CODE:
qtd_de_acai=float(input("valor"))
qtd_de_esfirra=float(input("valor"))

total=(qtd_de_acai+qtd_de_esfirra)
print(round(total, 2))
-- OUTPUT:
505.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:09) 
-- CODE:
x=24/100
print(x)

-- OUTPUT:
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:27) 
-- CODE:
x=24/10
print(x)

-- OUTPUT:
2.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:55) 
-- CODE:
x=float(input(qtd_de_acai))
y=float(input(qtd_de_esfirra))
total=x+y

print(round(total,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input(qtd_de_acai))
NameError: name 'qtd_de_acai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:57) 
-- CODE:
x=float(input(qtd_de_acai))
y=float(input(qtd_de_esfirra))
total=x+y

print(round(total,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input(qtd_de_acai))
NameError: name 'qtd_de_acai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:36) 
-- CODE:
x=float(input(qtd_de_acai))
y=float(input(qtd_de_esfirra))
total=x+y

print(round(total,  2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input(qtd_de_acai))
NameError: name 'qtd_de_acai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:16) 
-- CODE:
x=float(input("qtd_de_acai"))
y=float(input("qtd_de_esfirra"))
total=x+y

print(round(total,  2))
-- OUTPUT:
505.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:11) 
-- CODE:
x=24
y=3
acai=float("x/1000"))
total=x*200+y*2

print(round(total,  2))
-- ERROR:
File "XXXX", line 3
    acai=float("x/1000"))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:44) 
-- CODE:
x=24
y=3
xx=float("x/1000"))
total=xx*200+y*2

print(round(total,  2))
-- ERROR:
File "XXXX", line 3
    xx=float("x/1000"))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:59) 
-- CODE:
x=24
y=3
xx=float(x/1000)
total=xx*200+y*2

print(round(total,  2))
-- OUTPUT:
10.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:02) 
-- CODE:
x=24
y=3
xx=float(x/1000)
total=xx*200+y*2

print(round(total,  2))
-- EXECUTION TIME:
0.175204
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
10.8
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
10.8
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
10.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:03) 
-- CODE:
x=24
y=3
xx=float(x/1000)
total=xx*200+y*2

print(round(total,  2))
-- OUTPUT:
10.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:05) 
-- CODE:
x=24
y=3
xx=float(x/1000)
total=xx*200+y*2

print(round(total,  2))
-- EXECUTION TIME:
0.169393
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
10.8
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
10.8
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
10.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:05) 
-- CODE:
x=24
y=3
xx=float(x/1000)
total=xx*200+y*2

print(round(total,  2))
-- OUTPUT:
10.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:09) 
-- CODE:
x=24
y=3
xx=float(x/1000)
total=xx*200+y*2

print(round(total,  2))
-- EXECUTION TIME:
0.169179
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
10.8
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
10.8
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
10.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
